# otool_esp_component

./: CMakeLists.txt  LICENSE  README.md  idf_component.yml  otool_toolbox.cpp
include/: audio_config.h  audio_es_tools.h  i2c_bus_tools.h  ir_nec_tools.h  otool_toolbox.h  power_ic_ip2315.h
otool_i2c_bus/: i2c_bus_tools.cpp
otool_power_ic/: power_ic_ip2315.cpp
otools_audio/: audio_es_tools.cpp  sine_440Hz_30s_44100Hz_16bit_1ch.pcm  sine_pcm_build.py  test_a.pcm
otools_ir_nec/: ir_nec_encoder.cpp  ir_nec_tools.cpp  ir_nec_transceiver_main.c
